chore: add meta info and change openapi
